--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.1",
     "@types/node": "22.2.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.20",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
-    "next": "14.2.5",
-    "postcss": "8.4.41",
+    "lucide-react": "^0.427.0",
+    "next": "^14.0.4",
+    "postcss": "^8.4.41",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwindcss": "3.4.9",
+    "react-icons": "^5.2.1",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.5.0",
+    "tailwindcss": "^3.4.9",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.5.4"
   }
 }
